# it_workin_test_case

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05432bf43de5_auto_migrations.py  85b119776cd2_automigrations.py  c4ab04159473_automigrations.py
app/: app.py  models.py
app/core/: db.py
app/messanger/: routes.py  schemas.py  view.py
app/users/: routes.py  schemas.py  view.py
